crates/nexacore-types/tests/compile_fail/no_plaintext_constructor_for_encrypted_string.stderr
error[E0277]: the trait bound `EncryptedString: From<String>` is not satisfied
  --> tests/compile_fail/no_plaintext_constructor_for_encrypted_string.rs:15:68
   |
15 |     let _e: nexacore_types::encrypted::EncryptedString = plaintext.into();
   |                                                                    ^^^^ the trait `From<String>` is not implemented for `EncryptedString`
   |
   = note: required for `String` to implement `Into<EncryptedString>`
